fix z-index on header and arrow

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,6 +15,7 @@
   position: sticky;
   top: 0;
   backdrop-filter: blur(var(--blur-value));
+  z-index: 10;
 }
 
 .header > * {
