--- a/src/components/ScrollFor/style.css
+++ b/src/components/ScrollFor/style.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   user-select: none;
+  z-index: 11;
 }
 
 .scrollFor-arrow-down-container > * {
